namespace RedMujer_Backend.models
{
    public class PersonaEmprendimiento
    {
        public int Id_Persona { get; set; }
        public int Id_Emprendimiento { get; set; }
    }
}
